# auto-x

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/auto_z/: __init__.py
tests/: test_imports.py
